--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.body{
+   position: relative;
+
+}
 .text-red{
     color: red;
 }
@@ -8,4 +12,33 @@
 
 .custom{
     cursor: pointer;
+}
+
+
+/* Modal Content */
+.custom-modal-content {
+   position: absolute;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+   top: 80px;
+  right: 80px;
+
+}
+
+/* The Close Button */
+.custom-close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.custom-close:hover,
+.custom-close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
